--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-popover": "1.0.3",
+    "@radix-ui/react-tabs": "^1.0.2",
     "@types/node": "18.13.0",
     "@types/node-sass": "^4.11.3",
     "@types/react": "18.0.27",
@@ -20,5 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "sass": "^1.58.0"
   }
 }
