feat(docker): update docker compose and dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /front_end/node_modules
+      - /front_end
     depends_on:
       - postgres
