--- a/front_end/DockerFile
+++ b/front_end/DockerFile
@@ -1,11 +1,9 @@
 FROM node
 
 WORKDIR /front_end
-
 COPY package*.json ./
 
-RUN npm install -D tailwindcss@latest postcss@latest autoprefixer@latest
-RUN npm install -g npm@9.4.1
+RUN npm i
 COPY . .
 
 EXPOSE 3000
