--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
