feat(front_end): update cards tlists

--- a/front_end/DockerFile
+++ b/front_end/DockerFile
@@ -1,12 +1,12 @@
-FROM node
+FROM node:16
 
 WORKDIR /front_end
 COPY package*.json ./
 
+RUN apt-get update && apt-get install -y curl
 RUN npm i
 COPY . .
 
 EXPOSE 3000
 
-ENV PORT 3000
 CMD ["npm", "start"]
