--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.3",
     "@types/node": "18.13.0",
