feat(front_end): update create task

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "framer-motion": "^10.1.0",
     "next": "13.1.6",
     "nodemon": "^2.0.20",
