--- a/front_end/package.json
+++ b/front_end/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
     "framer-motion": "^10.1.0",
+    "lottie-react": "^2.4.0",
     "next": "13.1.6",
     "nodemon": "^2.0.20",
     "react": "18.2.0",
