--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,8 @@ services:
       - postgres
   postgres:
     image: "postgres"
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
-      - POSTGRES_DB=root      
+    env_file:
+      - .env        
     ports:
       - "5432:5432"
     volumes:
@@ -22,9 +20,8 @@ services:
 
   pgadmin-compose:
     image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "task@go.com"
-      PGADMIN_DEFAULT_PASSWORD: "task"
+    env_file:
+      - .env 
     ports:
       - "54322:80"
     depends_on:
