feat(update): update env

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 CRYPTO_PASSWORD="hjBN234JjkEmsE"
 CRYPTO_EMAIL="HJbn234jJKeMSe"
-POSTGRES_USER=patricia
+POSTGRES_USER=task
 POSTGRES_PASSWORD=2071123853
-POSTGRES_DB=task
+POSTGRES_DB=list
 PGADMIN_DEFAULT_EMAIL=task@example.com
 PGADMIN_DEFAULT_PASSWORD=2071123853
