--- a/back_end/db.env
+++ b/back_end/db.env
@@ -1,1 +1,1 @@
-HOST=host=localhost port=5432 user=patricia password=2071123853 dbname=task sslmode=disable
+HOST=host=localhost port=5432 user=task password=2071123853 dbname=list sslmode=disable
