--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 CRYPTO_PASSWORD="hjBN234JjkEmsE"
 CRYPTO_EMAIL="HJbn234jJKeMSe"
-POSTGRES_USER=patricia
-POSTGRES_PASSWORD=2071123853
-POSTGRES_DB=postgres
+CRYPTO_SECRET ="5ADA4asddfas4R"
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=root
 PGADMIN_DEFAULT_EMAIL=task@example.com
 PGADMIN_DEFAULT_PASSWORD=2071123853
