--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-
+CRYPTO_PASSWORD="hjBN234JjkEmsE"
+CRYPTO_EMAIL="HJbn234jJKeMSe"
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=root
+PGADMIN_DEFAULT_EMAIL=task@example.com
+PGADMIN_DEFAULT_PASSWORD=2071123853
