--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   back_end:
     build:
@@ -12,18 +12,18 @@ services:
   postgres:
     image: "postgres"
     env_file:
-      - .env        
+      - .env
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data  
+      - ./postgres-data:/var/lib/postgresql/data
 
   pgadmin-compose:
     image: dpage/pgadmin4
     env_file:
-      - .env 
+      - .env
     ports:
-      - "54323:80"
+      - "54324:80"
     depends_on:
       - postgres
   front_end:
